# negative

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/helper/: Cargo.toml
crates/helper/src/: main.rs
crates/injector/: Cargo.toml  build.rs  index.html  package.json  tailwind.config.ts  tauri.conf.json
crates/injector/capabilities/: default.json
crates/injector/src/: App.tsx  globals.css  types.ts
crates/injector/src-tauri/: inject.rs  main.rs
crates/injector/src/components/: log-panel.tsx  process-panel.tsx  titlebar.tsx  toolbar.tsx
crates/injector/src/components/ui/: button.tsx  switch.tsx
crates/payload/: Cargo.toml
crates/payload/src/: hook.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/xtask/src/: main.rs
