[package]
name = "injector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "injector"
path = "src-tauri/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shared = { path = "../shared" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]
